Added support for lowerThird